--- a/index.html
+++ b/index.html
@@ -1,12 +1,61 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ProyectoBoostrap</title>
+    <!-- Latest compiled and minified CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Latest compiled JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="./css.css" type="text/css">
 </head>
+
 <body>
-    
+    <header>
+        <nav class="navbar navbar-expand-sm bg-danger navbar-dark border border-dark border-2">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                    <img src="./Recursos/Imagenes/Beethoven.png" alt="Logo de Beethoven" style="width:80px;"
+                        class="rounded-pill">
+                </a>
+                <button class="navbar-toggler border border-1 border-muted bg-secondary" type="button"
+                    data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse flex-grow-0" id="collapsibleNavbar">
+                    <ul class="navbar-nav">
+                        <li class="nav-item text-center">
+                            <a class="nav-link" href="#">Inicio</a>
+                        </li>
+                        <li class="nav-item text-center">
+                            <a class="nav-link" href="#">Biografía</a>
+                        </li>
+                        <li class="nav-item text-center">
+                            <a class="nav-link" href="#">Obras</a>
+                        </li>
+                        <li class="nav-item text-center">
+                            <a class="nav-link" href="#">Piano</a>
+                        </li>
+                        <li class="nav-item text-center">
+                            <a class="nav-link" href="#">Iniciar Sesión</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <main>
+        <video id="fondo" loop autoplay muted>
+            <source src="./Recursos/Videos/fondo.mp4" type="video/mp4">
+            <source src="./Recursos/Videos/fondo.mp4" type="video/ogv">
+        </video>
+    </main>
+
 </body>
+
 </html>
