Se ha creado la página principal

--- a/index.html
+++ b/index.html
@@ -55,6 +55,34 @@
             <source src="./Recursos/Videos/fondo.mp4" type="video/ogv">
         </video>
     </main>
+    <footer class="footer hidden-print">
+        <nav class="container-fluid bg-danger navbar-dark border border-dark border-2">
+            <div class="container-fluid">
+                <a href="#">
+                    <img src="./Recursos/Imagenes/Instagram.png" alt="Logo de Instagram" style="width:40px;">
+                </a>
+                <a href="#">
+                    <img src="./Recursos/Imagenes/facebook.png" alt="Logo de facebook" style="width:40px;">
+                </a>
+                <div>
+                    <ul class="row">
+                        <li class="col-12 col-md-6 col-xl border border-danger text-center">
+                            <a class="nav-link" href="#">Quiénes Sómos</a>
+                        </li>
+                        <li class="col-12 col-md-6 col-xl order-xl-0 border border-danger text-center">
+                            <a class="nav-link" href="#">Objetivos</a>
+                        </li>
+                        <li class="col-12 col-md-6 col-xl border border-danger text-center">
+                            <a class="nav-link" href="#">Déjanos tus recomendaciones</a>
+                        </li>
+                        <li class="col-12 col-md-6 col-xl border border-danger text-center">
+                            <a class="nav-link" href="#">Support</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </footer>
 
 </body>
 
