--- a/prueba fondos.html
+++ b/prueba fondos.html
@@ -1,20 +1,30 @@
 <!DOCTYPE html>
-<html lang="es">
-
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ProyectoBoostrap</title>
+    <title>Document</title>
     <!-- Latest compiled and minified CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Latest compiled JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="./css.css" type="text/css">
-</head>
+    <style type="text/css">
+        #fondo{
+            position: fixed;
+            top: 0;
+            z-index: 1;
+        }
 
+        #contenido{
+            position: fixed;
+            top: 0;
+            z-index: 2;
+        }
+    </style>
+</head>
 <body>
     <div id="fondo">
         <video loop autoplay muted>
@@ -22,7 +32,7 @@
             <source src="./Recursos/Videos/fondo.mp4" type="video/ogv">
         </video>
     </div>
-    <div id="contenido">
+    <div id="contenido">-
         <header>
             <nav class="navbar navbar-expand-sm justify-content-end bg-danger navbar-dark border border-dark border-2">
                 <div class="container-fluid">
@@ -36,56 +46,27 @@
                     </button>
                     <div class="collapse navbar-collapse flex-grow-0" id="collapsibleNavbar">
                         <ul class="navbar-nav">
-                            <li class="nav-item text-center">
-                                <a class="nav-link text-dark" href="#">Inicio</a>
+                            <li class="nav-item text-center text-dark">
+                                <a class="nav-link" href="#">Inicio</a>
                             </li>
                             <li class="nav-item text-center">
-                                <a class="nav-link text-dark" href="#">Biografía</a>
+                                <a class="nav-link" href="#">Biografía</a>
                             </li>
                             <li class="nav-item text-center">
-                                <a class="nav-link text-dark" href="#">Obras</a>
+                                <a class="nav-link" href="#">Obras</a>
                             </li>
                             <li class="nav-item text-center">
-                                <a class="nav-link text-dark" href="#">Piano</a>
+                                <a class="nav-link" href="#">Piano</a>
                             </li>
                             <li class="nav-item text-center">
-                                <a class="nav-link text-dark" href="#">Iniciar Sesión</a>
+                                <a class="nav-link" href="#">Iniciar Sesión</a>
                             </li>
                         </ul>
                     </div>
                 </div>
             </nav>
         </header>
-        <footer class="footer hidden-print">
-            <nav class="container-fluid bg-danger navbar-dark border border-dark border-2">
-                <div class="d-flex">
-                    <a href="#">
-                        <img src="./Recursos/Imagenes/Instagram.png" alt="Logo de Instagram" style="width:40px;">
-                    </a>
-                    <a href="#">
-                        <img src="./Recursos/Imagenes/facebook.png" alt="Logo de facebook" style="width:40px;">
-                    </a>
-                    <div>
-                        <ul class="row">
-                            <li class="col-12 col-md-6 col-xl border border-danger text-center">
-                                <a class="nav-link" href="#">Quiénes Sómos</a>
-                            </li>
-                            <li class="col-12 col-md-6 col-xl order-xl-0 border border-danger text-center">
-                                <a class="nav-link" href="#">Objetivos</a>
-                            </li>
-                            <li class="col-12 col-md-6 col-xl border border-danger text-center">
-                                <a class="nav-link" href="#">Déjanos tus recomendaciones</a>
-                            </li>
-                            <li class="col-12 col-md-6 col-xl border border-danger text-center">
-                                <a class="nav-link" href="#">Support</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
-        </footer>
+
     </div>
-
 </body>
-
 </html>
