--- a/index.html
+++ b/index.html
@@ -36,19 +36,19 @@
                     </button>
                     <div class="collapse navbar-collapse flex-grow-0" id="collapsibleNavbar">
                         <ul class="navbar-nav">
-                            <li class="nav-item text-center">
+                            <li class="nav-item .text-center .text-uppercase display-7">
                                 <a class="nav-link text-dark" href="#">Inicio</a>
                             </li>
-                            <li class="nav-item text-center">
+                            <li class="nav-item .text-center .text-uppercase display-7">
                                 <a class="nav-link text-dark" href="#">Biografía</a>
                             </li>
-                            <li class="nav-item text-center">
+                            <li class="nav-item .text-center .text-uppercase display-7">
                                 <a class="nav-link text-dark" href="#">Obras</a>
                             </li>
-                            <li class="nav-item text-center">
+                            <li class="nav-item .text-center .text-uppercase display-7">
                                 <a class="nav-link text-dark" href="#">Piano</a>
                             </li>
-                            <li class="nav-item text-center">
+                            <li class="nav-item .text-center .text-uppercase display-7">
                                 <a class="nav-link text-dark" href="#">Iniciar Sesión</a>
                             </li>
                         </ul>
@@ -56,6 +56,13 @@
                 </div>
             </nav>
         </header>
+        <main>
+
+
+
+
+
+        </main>
         <footer class="footer hidden-print">
             <nav class="container-fluid bg-danger navbar-dark border border-dark border-2">
                 <div class="d-flex">
@@ -84,7 +91,6 @@
                 </div>
             </nav>
         </footer>
-    </div>
 
 </body>
 
