--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         </video>
     </div>
     <div id="contenido">
-        <header>
+        <header class="header">
             <nav class="navbar navbar-expand-sm justify-content-end bg-danger navbar-dark border border-dark border-2">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#">
+                    <a class="navbar-brand" href="./index.html">
                         <img src="./Recursos/Imagenes/Beethoven.png" alt="Logo de Beethoven" style="width:80px;"
                             class="rounded-pill">
                     </a>
@@ -36,19 +36,19 @@
                     </button>
                     <div class="collapse navbar-collapse flex-grow-0" id="collapsibleNavbar">
                         <ul class="navbar-nav">
-                            <li class="nav-item .text-center .text-uppercase display-7">
-                                <a class="nav-link text-dark" href="#">Inicio</a>
+                            <li class="nav-item text-center text-uppercase display-6">
+                                <a class="nav-link text-dark" href="#inicio">Inicio</a>
                             </li>
-                            <li class="nav-item .text-center .text-uppercase display-7">
+                            <li class="nav-item text-center text-uppercase display-6">
                                 <a class="nav-link text-dark" href="#">Biografía</a>
                             </li>
-                            <li class="nav-item .text-center .text-uppercase display-7">
+                            <li class="nav-item text-center text-uppercase display-6">
                                 <a class="nav-link text-dark" href="#">Obras</a>
                             </li>
-                            <li class="nav-item .text-center .text-uppercase display-7">
+                            <li class="nav-item text-center text-uppercase display-6">
                                 <a class="nav-link text-dark" href="#">Piano</a>
                             </li>
-                            <li class="nav-item .text-center .text-uppercase display-7">
+                            <li class="nav-item text-center text-uppercase display-6">
                                 <a class="nav-link text-dark" href="#">Iniciar Sesión</a>
                             </li>
                         </ul>
@@ -56,41 +56,25 @@
                 </div>
             </nav>
         </header>
-        <main>
-
-
-
-
-
+        <main class="main" id="inicio">
+            <div class="container-fluid w-80">
+                <h1 class="display-1 text-center text-danger bg-transparent text-uppercase">Beethoven</h1>
+            </div>
         </main>
-        <footer class="footer hidden-print">
-            <nav class="container-fluid bg-danger navbar-dark border border-dark border-2">
-                <div class="d-flex">
-                    <a href="#">
-                        <img src="./Recursos/Imagenes/Instagram.png" alt="Logo de Instagram" style="width:40px;">
-                    </a>
-                    <a href="#">
-                        <img src="./Recursos/Imagenes/facebook.png" alt="Logo de facebook" style="width:40px;">
-                    </a>
-                    <div>
-                        <ul class="row">
-                            <li class="col-12 col-md-6 col-xl border border-danger text-center">
-                                <a class="nav-link" href="#">Quiénes Sómos</a>
-                            </li>
-                            <li class="col-12 col-md-6 col-xl order-xl-0 border border-danger text-center">
-                                <a class="nav-link" href="#">Objetivos</a>
-                            </li>
-                            <li class="col-12 col-md-6 col-xl border border-danger text-center">
-                                <a class="nav-link" href="#">Déjanos tus recomendaciones</a>
-                            </li>
-                            <li class="col-12 col-md-6 col-xl border border-danger text-center">
-                                <a class="nav-link" href="#">Support</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
+        <!--
+        <footer class=" footer bg-dark text-white pt-5 pb-4">
+            <nav class="container text-center text-md-left">
+                <ul class="row text-center text-md-left">
+                    <li class="col-12 col-md-6 col-xl border border-danger text-center">Inicio</li>
+                    <li class="col-12 col-md-6 col-xl order-xl-0 border border-danger text-center">HEO</li>
+                    <li class="col-12 col-md-6 col-xl border border-danger text-center">Quienes Sómos</li>
+                    <li class="col-12 col-md-6 col-xl border border-danger text-center">Contacto</li>
+                </ul>
             </nav>
         </footer>
+        -->
+    </div>
+
 
 </body>
 
