--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                                 <a class="nav-link text-dark" href="#inicio">Inicio</a>
                             </li>
                             <li class="nav-item text-center text-uppercase display-6">
-                                <a class="nav-link text-dark" href="#">Biografía</a>
+                                <a class="nav-link text-dark" href="#biografia">Biografía</a>
                             </li>
                             <li class="nav-item text-center text-uppercase display-6">
                                 <a class="nav-link text-dark" href="#">Obras</a>
@@ -56,11 +56,120 @@
                 </div>
             </nav>
         </header>
-        <main class="main" id="inicio">
+        <main class="main">
             <div class="container-fluid w-80">
                 <h1 class="display-1 text-center text-danger bg-transparent text-uppercase">Beethoven</h1>
             </div>
+            <div class="container-fluid w-50 mt-5 bg-danger" id="biografia">
+                <h2 class="display-6">Biografía</h2>
+                <hr class="bg-info">
+                <div class="contents">
+                    <div class="float-start pe-2">
+                        <img src="./Recursos/Imagenes/Beethoven.jpg " class="rounded p-1 " alt="Imagen de Beethoven"
+                            width="150px">
+                    </div>
+                    <p>
+                        Ludwig van Beethovena​ (Bonn, Arzobispado de Colonia; 16 de diciembre de 1770b​-Viena, 26 de
+                        marzo de 1827) fue un compositor, director de orquesta, pianista y profesor de piano alemán. Su
+                        legado musical abarca, cronológicamente, desde el Clasicismo hasta los inicios del Romanticismo.
+                        Es considerado uno de los compositores más importantes de la historia de la música y su legado
+                        ha influido de forma decisiva en la evolución posterior de este arte.
+
+                        Siendo el último gran representante del clasicismo vienés (después de Christoph Willibald Gluck,
+                        Joseph Haydn y Wolfgang Amadeus Mozart), Beethoven consiguió hacer trascender la música del
+                        Romanticismo, influyendo en diversidad de obras musicales del siglo xix. Su arte se expresó en
+                        numerosos géneros y aunque las sinfonías fueron la fuente principal de su popularidad
+                        internacional, su impacto resultó ser principalmente significativo en sus obras para piano y
+                        música de cámara.
+
+                        Su producción incluye los géneros pianístico (treinta y dos sonatas para piano), de cámara
+                        (incluyendo numerosas obras para conjuntos instrumentales de entre ocho y dos miembros),
+                        concertante (conciertos para piano, para violín y triple), sacra (dos misas, un oratorio),
+                        lieder, música incidental (la ópera Fidelio, un ballet, músicas para obras teatrales), y
+                        orquestal, en la que ocupan lugar preponderante Nueve sinfonías.
+                    </p>
+
+                </div>
+                <div class="contents">
+                    <p>
+                        La familia de Beethoven vivía bajo condiciones modestas. Su abuelo paterno, llamado también
+                        Ludwig,c​
+                        (Malinas, 1712-1773), era descendiente de una familia de campesinos y granjeros originarios de
+                        Brabante, en la región de Flandes (Bélgica), que se trasladaron a Bonn en el siglo XVIII. La
+                        partícula van de su nombre,1​ contrario a lo que pudiera creerse, no posee orígenes nobles,
+                        mientras
+                        que Beethoven probablemente pudo haberse derivado de Bettenhoven (Fr.: Bettincourt), una
+                        localidad
+                        de Lieja, aunque otra hipótesis apunta a que el apellido proviene de Beeth (que en flamenco
+                        quiere
+                        decir «remolacha») y Hoven, que es el plural de Hof («granja»). De esta forma, «Beethoven»
+                        vendría a
+                        significar «granjas de remolachas».
+                    </p>
+                </div>
+                <div class="contents">
+                    <p>En marzo de 1733 su abuelo emigró a Bonn, en donde trabajó como director y maestro de capilla de
+                        la
+                        orquesta del príncipe elector de Colonia. El 17 de septiembre de ese mismo año contrajo
+                        matrimonio
+                        con Maria Josepha Poll, cuyos testigos fueron el organista Gilles van den Aeden y Johann
+                        Riechler.
+                        Tuvieron tres hijos: Maria Bernarda Ludovica (bautizada el 28 de agosto de 1734, muerta el 17 de
+                        octubre de 1735), Marcus Josephus (bautizado el 25 de abril de 1736, muerto poco después en una
+                        fecha indeterminada) y Johann, de cuyo nacimiento o bautismo no se conserva registro; se supone
+                        que
+                        nació a finales de 1739 o comienzos de 1740. El tercero fue el único que sobrevivió a la
+                        infancia y
+                        fue el padre de Beethoven. Johann fue músico y tenor de la corte electoral.
+                    </p>
+                </div>
+                <div class="contents">
+                    <div class="float-end ps-2">
+                        <img src="./Recursos/Imagenes/Padres_Beethoven.jpg" class="rounded p-1"
+                            alt="Imagen de los padres de Beethoven" width="180px">
+                    </div>
+                    <p>El 12 de noviembre de 1767 se casó en la iglesia de San Remigio en Bonn con Maria Magdalena
+                        Keverich
+                        (19 de diciembre de 1746-17 de julio de 1787), una joven viuda e hija de un cocinero de
+                        Tréveris.
+                        Por ese motivo, el matrimonio de sus padres contó con la oposición de su abuelo, que por aquel
+                        entonces ya era el prestigioso maestro de capilla de la corte y consideraba a la joven de una
+                        clase
+                        social inferior a la de su hijo, lo cual no era cierto ya que en su familia había concejales e
+                        incluso senadores.
+                    </p>
+                </div>
+                <div class="contents">
+                    <p>
+                        El matrimonio se trasladó al n.º 515 de la Bonngasse y dos años después, en 1769, nació su
+                        primer
+                        hijo, bautizado como Ludwig Maria van Beethoven. Sin embargo, apenas seis días después de su
+                        bautizo, el niño falleció. El 17 de diciembre de 1770 fue bautizado su segundo hijo, en la
+                        iglesia
+                        de San Remigio de Bonn, con el nombre de «Ludovicus van Beethoven» (Ludwig van Beethoven) según
+                        se
+                        describe en el acta de bautismo. Su fecha de nacimiento, generalmente aceptada como el 16 de
+                        diciembre de 1770, no cuenta con documentación histórica que pueda respaldarla. Maria Magdalena
+                        tuvo
+                        aún cinco hijos más, de los que solo sobrevivieron dos: Kaspar Anton Karl van Beethoven,
+                        bautizado
+                        el 8 de abril de 1774, y Nikolaus Johann van Beethoven, bautizado el 2 de octubre de 1776. Los
+                        biógrafos no tienen claras las fechas de nacimiento exactas de ninguno de los hijos de Maria
+                        Magdalena Keverich.
+                    </p>
+                </div>
+            </div>
         </main>
+        <footer class=" footer bg-dark text-white pt-5 pb-4">
+            <nav class="container text-center text-md-left">
+                <ul class="row text-center text-md-left">
+                    <li class="col-12 col-md-6 col-xl border border-danger text-center">Inicio</li>
+                    <li class="col-12 col-md-6 col-xl order-xl-0 border border-danger text-center">HEO</li>
+                    <li class="col-12 col-md-6 col-xl border border-danger text-center">Quienes Sómos</li>
+                    <li class="col-12 col-md-6 col-xl border border-danger text-center">Contacto</li>
+                </ul>
+            </nav>
+        </footer>
         <!--
         <footer class=" footer bg-dark text-white pt-5 pb-4">
             <nav class="container text-center text-md-left">
