--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
                 </div>
             </nav>
         </header>
-        <main class="main">
+        <main class="main" id="biografia">
             <div class="container-fluid w-80">
                 <h1 class="display-1 text-center text-danger bg-transparent text-uppercase">Beethoven</h1>
             </div>
-            <div class="container-fluid w-50 mt-5 bg-danger" id="biografia">
+            <div class="container-fluid w-50 mt-5 bg-danger">
                 <h2 class="display-6">Biografía</h2>
                 <hr class="bg-info">
                 <div class="contents">
