--- a/Index2.html
+++ b/Index2.html
@@ -62,16 +62,16 @@
             <!-- The slideshow/carousel -->
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./Recursos/Imagenes/Piano_Carrusel.jpg" alt="Imagen de un piano"
-                        class="d-block" style="width:100%">
+                    <img src="./Recursos/Imagenes/Piano_Carrusel.jpg" alt="Imagen de un piano" class="d-block"
+                        style="width:100%">
                     <div class="carousel-caption">
                         <h3>Beethoven</h3>
                         <p>Compositor, director de orquesta, pianista y profesor de piano alemán.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="./Recursos/Imagenes/-Orquesta-1.jpg" alt="Imagen de una orquesta"
-                        class="d-block" style="width:100%">
+                    <img src="./Recursos/Imagenes/-Orquesta-1.jpg" alt="Imagen de una orquesta" class="d-block"
+                        style="width:100%">
                     <div class="carousel-caption">
                         <h3>Mozart</h3>
                         <p>«Lo único peor que una flauta, son dos flautas».</p>
@@ -106,10 +106,11 @@
                             alt="Imagen del profesor Beethoven">
                         <div class="card-body">
                             <h3 class="card-title">Beethoven</h3>
-                            <p class="card-text">Puedes ver unas de mis obras más representativas para inspirarte a
+                            <p class="card-text" style="margin-bottom: 3.8em;">Puedes ver unas de mis obras más
+                                representativas para inspirarte a
                                 suscribirte a nuestras clases, estás hablando con un expero de la sinfonía!</p>
                             <hr>
-                            <div class="container" style="margin: 0 auto; width: 30%;">
+                            <div class="container" style="margin: 0 auto; width: 20%;">
                                 <a href="https://www.youtube.com/watch?v=54nV3O3XvcU" class="btn btn-danger">Acceder</a>
                             </div>
                         </div>
@@ -123,7 +124,7 @@
                                 Orquestas desde cero? En este curso aprenderás a identificar y explotar de manera
                                 práctica sinfonías, sonatas... de la misma forma que haría un profesional del campo.</p>
                             <hr>
-                            <div class="container" style="margin: 0 auto; width: 30%;">
+                            <div class="container" style="margin: 0 auto; width: 20%;">
                                 <a href="https://www.youtube.com/watch?v=rrk-zuuc77U" class="btn btn-danger">Acceder</a>
                             </div>
                         </div>
@@ -133,13 +134,14 @@
                             alt="Imagen del profesor Richard Wagner">
                         <div class="card-body">
                             <h5 class="card-title">Richard Wagner</h5>
-                            <p class="card-text">¿No sabes tocar el piano? Mejor, porque en este curso vamos a empezar
+                            <p class="card-text" style="margin-bottom: 2.3em;">¿No sabes tocar el piano? Mejor, porque
+                                en este curso vamos a empezar
                                 desde
                                 cero. Un curso pensado para todas las personas de todas las edades, independientemente
                                 de su nivel.
                             </p>
                             <hr>
-                            <div class="container" style="margin: 0 auto; width: 30%;">
+                            <div class="container" style="margin: 0 auto; width: 20%;">
                                 <a href="https://www.youtube.com/watch?v=GGU1P6lBW6Q" class="btn btn-danger">Acceder</a>
                             </div>
                         </div>
@@ -148,6 +150,28 @@
             </div>
         </div>
     </main>
+    <footer class=" footer bg-dark text-white pt-4 pb-4">
+        <nav class="container">
+            <ul class="row text-center justify-content-center" style="list-style-type: none;">
+                <li class="col-12 col-md-6 col-xl">
+                    <a class="nav-link text-center text-white" href="">Inicio</a>
+                </li>
+                <li class="col-12 col-md-6 col-xl">
+                    <a class="nav-link text-center text-white"
+                        href="https://www.rocketlawyer.com/es/es/documentos/el-aviso-legal-en-una-pagina-web">Derechos
+                        Legales</a>
+                </li>
+                <li class="col-12 col-md-6 col-xl">
+                    <a class="nav-link text-center text-white"
+                        href="https://www.rocketlawyer.com/es/es/documentos/politica-de-cookies">Cookies</a>
+                </li>
+                <li class="col-12 col-md-6 col-xl">
+                    <a class="nav-link text-center text-white"
+                        href="https://www.rocketlawyer.com/es/es/guia-rapida/aviso-legal-pagina-web">Términos de uso</a>
+                </li>
+            </ul>
+        </nav>
+    </footer>
 </body>
 
 </html>
