--- a/Index2.html
+++ b/Index2.html
@@ -106,11 +106,11 @@
                             alt="Imagen del profesor Beethoven">
                         <div class="card-body">
                             <h3 class="card-title">Beethoven</h3>
-                            <p class="card-text" style="margin-bottom: 3.8em;">Puedes ver unas de mis obras más
+                            <p class="card-text">Puedes ver unas de mis obras más
                                 representativas para inspirarte a
                                 suscribirte a nuestras clases, estás hablando con un expero de la sinfonía!</p>
                             <hr>
-                            <div class="container" style="margin: 0 auto; width: 20%;">
+                            <div class="container">
                                 <a href="https://www.youtube.com/watch?v=54nV3O3XvcU" class="btn btn-danger">Acceder</a>
                             </div>
                         </div>
@@ -124,7 +124,7 @@
                                 Orquestas desde cero? En este curso aprenderás a identificar y explotar de manera
                                 práctica sinfonías, sonatas... de la misma forma que haría un profesional del campo.</p>
                             <hr>
-                            <div class="container" style="margin: 0 auto; width: 20%;">
+                            <div class="container">
                                 <a href="https://www.youtube.com/watch?v=rrk-zuuc77U" class="btn btn-danger">Acceder</a>
                             </div>
                         </div>
@@ -134,14 +134,14 @@
                             alt="Imagen del profesor Richard Wagner">
                         <div class="card-body">
                             <h5 class="card-title">Richard Wagner</h5>
-                            <p class="card-text" style="margin-bottom: 2.3em;">¿No sabes tocar el piano? Mejor, porque
+                            <p class="card-text">¿No sabes tocar el piano? Mejor, porque
                                 en este curso vamos a empezar
                                 desde
                                 cero. Un curso pensado para todas las personas de todas las edades, independientemente
                                 de su nivel.
                             </p>
                             <hr>
-                            <div class="container" style="margin: 0 auto; width: 20%;">
+                            <div class="container">
                                 <a href="https://www.youtube.com/watch?v=GGU1P6lBW6Q" class="btn btn-danger">Acceder</a>
                             </div>
                         </div>
@@ -154,7 +154,7 @@
         <nav class="container">
             <ul class="row text-center justify-content-center" style="list-style-type: none;">
                 <li class="col-12 col-md-6 col-xl">
-                    <a class="nav-link text-center text-white" href="">Inicio</a>
+                    <a class="nav-link text-center text-white" href="#">Inicio</a>
                 </li>
                 <li class="col-12 col-md-6 col-xl">
                     <a class="nav-link text-center text-white"
