Se añaden el quienes somos, los precios y el formulario de contacto

--- a/Index2.html
+++ b/Index2.html
@@ -32,16 +32,16 @@
                             <a class="nav-link text-center text-uppercase" href="#inicio">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-center text-uppercase" href="#">Quienes Sómos</a>
+                            <a class="nav-link text-center text-uppercase" href="#quienessomos">Quienes Sómos</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-center text-uppercase" href="#profesores">Profesores</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-center text-uppercase" href="#">Precio</a>
+                            <a class="nav-link text-center text-uppercase" href="#precio">Precio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-center text-uppercase" href="#">Contácto</a>
+                            <a class="nav-link text-center text-uppercase" href="#contacto">Contáctanos</a>
                         </li>
                     </ul>
                 </div>
@@ -95,6 +95,50 @@
                 <span class="carousel-control-next-icon rounded-pill border border-danger" style="width:90px"></span>
             </button>
         </div>
+        <!--¿Quiénes somos?-->
+        <div class="contents d-block mt-5">
+            <div class="container-fluid">
+                <header class="mb-5">
+                    <h2 class="text-center text-uppercase text-secondary" id="quienessomos">¿Quiénes Somos?</h2>
+                </header>
+            </div>
+            <div class="card-group">
+                <div class="card p-2 border border-5">
+                    <div class="card-body">
+                        <h3 class="card-title"> SOBRE NOSOTROS</h3>
+                        <hr>
+                        <img src="Recursos/Imagenes/Clave_de_Sol_y_notas_en_Pentagrama-1.jpg" alt="Pentagrama" width="100%">
+                        <p class="card-text">Classic Music School es una empresa creada para que los jóvenes se adentren
+                            dentor de la música clásica para que conozcan la historia de la música y se adentren a un
+                            mundo nuevo dónde todo seguramente les va a asombrar</p>
+                    </div>
+                </div>
+                <div class="card p-2 border border-5">
+                    <div class="card-body">
+                        <h3 class="card-title">OBJETIVOS</h3>
+                        <hr>
+                        <img src="Recursos/Imagenes/Objetivos.jpg" alt="Ejemplo de clase de música" width="100%">
+                        <br><br>
+                        <p class="card-text">Dentro de Classic Music School queremos que nuestros alumnos se adentren
+                            dentro del mundo de la música clásica y conozcan su historia, además de aprender cómo tocar
+                            un instrumento o simplemente dirigir tu propia orquesta.</p>
+                    </div>
+                </div>
+                <div class="card p-2 border border-5">
+                    <div class="card-body">
+                        <h3 class="card-title">VISIÓN</h3>
+                        <hr>
+                        <img src="./Recursos/Imagenes/vision.jpg" alt="Vision" width="100%">
+                        <br><br>
+                        <p class="card-text">Desde Classic Music School queremos devolver a la música clásica su época
+                            de gloria. Hoy en día muchos jóvenes escuchan sobre todo reguetón y nuevas modas que van
+                            surgiendo, pero con este curso descubrirán un tipo de música nuevo que enamorará tanto sus
+                            oídos como su corazón.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--Profesores-->
         <div class="contents d-block mt-5">
             <div class="container-fluid">
                 <header class="mb-5">
@@ -108,14 +152,14 @@
                             <h3 class="card-title">Beethoven</h3>
                             <p class="card-text">Puedes ver unas de mis obras más
                                 representativas para inspirarte a
-                                suscribirte a nuestras clases, estás hablando con un expero de la sinfonía!</p>
+                                suscribirte a nuestras clases, ¡estás hablando con un experto de la sinfonía!</p>
                             <hr>
                             <div class="container">
                                 <a href="https://www.youtube.com/watch?v=54nV3O3XvcU" class="btn btn-danger">Acceder</a>
                             </div>
                         </div>
                     </div>
-                    <div class="card  p-2 border border-5">
+                    <div class="card p-2 border border-5">
                         <img src="./Recursos/Imagenes/mozart_carrusel.jpg" class="card-img-top"
                             alt="Imagen del profesor Mozart">
                         <div class="card-body">
@@ -149,6 +193,79 @@
                 </div>
             </div>
         </div>
+        <!--Precios-->
+        <div class="contents d-block mt-5">
+            <div class="container-fluid">
+                <header class="mb-5">
+                    <h2 class="text-center text-uppercase text-secondary" id="precio">Precios</h2>
+                </header>
+                <div class="card-group">
+                    <div class="card p-2 border border-5">
+                        <div class="card-body">
+                            <h5 class="card-title">25,95 €/mes</h5>
+                            <p class="card-text">Puedes aprender todo sobre este tipo de música por este modico precio.
+                                ¿Estás
+                                seguro de que te lo quieres perder? ¡Clica en el botón de reservar para coger tu sitio!
+                            </p>
+                            <hr>
+                            <div class="container">
+                                <a href="#" class="btn btn-danger">Reservar</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card p-2 border border-5">
+                        <div class="card-body">
+                            <h5 class="card-title">295,95 €/año</h5>
+                            <p class="card-text">Está increíble oferta que te hacemos para aprender músca todo el año es
+                                tan impresionante como lo que lograrás aprender de música clásica con nuestros
+                                profesores
+                                ¿Estás
+                                dispuesto a perdértelo? ¡Clica en el botón de reservar para coger tu sitio!
+                            </p>
+                            <hr>
+                            <div class="container">
+                                <a href="#" class="btn btn-danger">Reservar</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--Contacto-->
+        <div class="contents d-block mt-5">
+            <div class="container-fluid">
+                <header class="mb-5">
+                    <h2 class="text-center text-uppercase text-secondary" id="cotacto">Contacto</h2>
+                </header>
+                <form class="row" action="#" method="post">
+                    <div class="col-md-6">
+                        <label for="nombre" class="form-label">Nombre</label>
+                        <input class="form-control" type="text" name="nombre" id="nombre" placeholder="Ej: Pablo" required>
+                    </div>
+                    <div class="col-md-6">
+                        <label for="apellidos" class="form-label">Apellidos</label>
+                        <input class="form-control" type="text" name="apellidos" id="apellidos" placeholder="Ej: García García" required>
+                    </div>
+                    <div class="col-md-6">
+                        <label for="email" class="form-label">E-mail</label>
+                        <input class="form-control" type="email" name="email" id="email" placeholder="Ej: hola@gmail.com" required>
+                    </div>
+                    <div class="col-md-6">
+                        <label for="telefono" class="form-label">Teléfono</label>
+                        <input class="form-control" type="text" name="apellidos" id="apellidos" placeholder="Ej: +34 123456789" required>
+                    </div>
+                    <div class="col">
+                        <label for="comentarios" class="form-label">Comentarios</label>
+                        <textarea class="form-control" name="comentarios" id="comentario" cols="20" rows="5"></textarea>
+                    </div>
+                    <div class="col-md-12">
+                        <br>
+                        <button class="btn btn-danger" type="submit">Enviar</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+        <hr>
     </main>
     <footer class=" footer bg-dark text-white pt-4 pb-4">
         <nav class="container">
