--- a/Index2.html
+++ b/Index2.html
@@ -107,7 +107,8 @@
                     <div class="card-body">
                         <h3 class="card-title"> SOBRE NOSOTROS</h3>
                         <hr>
-                        <img src="Recursos/Imagenes/Clave_de_Sol_y_notas_en_Pentagrama-1.jpg" alt="Pentagrama" width="100%">
+                        <img src="Recursos/Imagenes/Clave_de_Sol_y_notas_en_Pentagrama-1.jpg" alt="Pentagrama"
+                            width="100%">
                         <p class="card-text">Classic Music School es una empresa creada para que los jóvenes se adentren
                             dentor de la música clásica para que conozcan la historia de la música y se adentren a un
                             mundo nuevo dónde todo seguramente les va a asombrar</p>
@@ -199,33 +200,53 @@
                 <header class="mb-5">
                     <h2 class="text-center text-uppercase text-secondary" id="precio">Precios</h2>
                 </header>
-                <div class="card-group">
+                <div class="card-group" style="width: 50%; margin: 0 auto;">
                     <div class="card p-2 border border-5">
+                        <div class="card-header">
+                            <h5 class="my-0 font-weight-normal">Principiante</h5>
+                        </div>
                         <div class="card-body">
-                            <h5 class="card-title">25,95 €/mes</h5>
-                            <p class="card-text">Puedes aprender todo sobre este tipo de música por este modico precio.
-                                ¿Estás
-                                seguro de que te lo quieres perder? ¡Clica en el botón de reservar para coger tu sitio!
-                            </p>
-                            <hr>
-                            <div class="container">
-                                <a href="#" class="btn btn-danger">Reservar</a>
-                            </div>
+                            <h1 class="card-title pricing-card-title">10€<small class="text-muted">/mes</small></h1>
+                            <ul class="list-unstyled mt-3 mb-4">
+                                <li>1 día de clase a elegir</li>
+                                <li>Instrumentos disponibles: piano y guitarra</li>
+                                <li>2h de clase</li>
+                                <li>1 púa para guitarra gratis</li>
+                            </ul>
+                            <button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for
+                                free</button>
                         </div>
                     </div>
                     <div class="card p-2 border border-5">
+                        <div class="card-header">
+                            <h5 class="my-0 font-weight-normal">Principiante</h5>
+                        </div>
                         <div class="card-body">
-                            <h5 class="card-title">295,95 €/año</h5>
-                            <p class="card-text">Está increíble oferta que te hacemos para aprender músca todo el año es
-                                tan impresionante como lo que lograrás aprender de música clásica con nuestros
-                                profesores
-                                ¿Estás
-                                dispuesto a perdértelo? ¡Clica en el botón de reservar para coger tu sitio!
-                            </p>
-                            <hr>
-                            <div class="container">
-                                <a href="#" class="btn btn-danger">Reservar</a>
-                            </div>
+                            <h1 class="card-title pricing-card-title">10€<small class="text-muted">/mes</small></h1>
+                            <ul class="list-unstyled mt-3 mb-4">
+                                <li>1 día de clase a elegir</li>
+                                <li>Instrumentos disponibles: piano y guitarra</li>
+                                <li>2h de clase</li>
+                                <li>1 púa para guitarra gratis</li>
+                            </ul>
+                            <button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for
+                                free</button>
+                        </div>
+                    </div>
+                    <div class="card p-2 border border-5">
+                        <div class="card-header">
+                            <h5 class="my-0 font-weight-normal">Principiante</h5>
+                        </div>
+                        <div class="card-body">
+                            <h1 class="card-title pricing-card-title">10€<small class="text-muted">/mes</small></h1>
+                            <ul class="list-unstyled mt-3 mb-4">
+                                <li>1 día de clase a elegir</li>
+                                <li>Instrumentos disponibles: piano y guitarra</li>
+                                <li>2h de clase</li>
+                                <li>1 púa para guitarra gratis</li>
+                            </ul>
+                            <button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for
+                                free</button>
                         </div>
                     </div>
                 </div>
@@ -240,19 +261,23 @@
                 <form class="row" action="#" method="post">
                     <div class="col-md-6">
                         <label for="nombre" class="form-label">Nombre</label>
-                        <input class="form-control" type="text" name="nombre" id="nombre" placeholder="Ej: Pablo" required>
+                        <input class="form-control" type="text" name="nombre" id="nombre" placeholder="Ej: Pablo"
+                            required>
                     </div>
                     <div class="col-md-6">
                         <label for="apellidos" class="form-label">Apellidos</label>
-                        <input class="form-control" type="text" name="apellidos" id="apellidos" placeholder="Ej: García García" required>
+                        <input class="form-control" type="text" name="apellidos" id="apellidos"
+                            placeholder="Ej: García García" required>
                     </div>
                     <div class="col-md-6">
                         <label for="email" class="form-label">E-mail</label>
-                        <input class="form-control" type="email" name="email" id="email" placeholder="Ej: hola@gmail.com" required>
+                        <input class="form-control" type="email" name="email" id="email"
+                            placeholder="Ej: hola@gmail.com" required>
                     </div>
                     <div class="col-md-6">
                         <label for="telefono" class="form-label">Teléfono</label>
-                        <input class="form-control" type="text" name="apellidos" id="apellidos" placeholder="Ej: +34 123456789" required>
+                        <input class="form-control" type="text" name="apellidos" id="apellidos"
+                            placeholder="Ej: +34 123456789" required>
                     </div>
                     <div class="col">
                         <label for="comentarios" class="form-label">Comentarios</label>
