Se corrigen unas cosillas

--- a/Index2.html
+++ b/Index2.html
@@ -111,8 +111,8 @@
                         <h2 class="text-white">Sobre Nosotros</h2>
                         <hr class="text-white">
                         <p class="text-white">Classic Music School es una empresa creada para que los jóvenes se
-                            adentren dentor de la
-                            música clásica para que conozcan la historia de la música y se adentren a un mundo nuevo
+                            adentren dentro de la
+                            música clásica, para que conozcan la historia de la música y profundizen en un mundo nuevo
                             dónde todo seguramente les va a asombrar.</p>
                     </div>
                     <div class="feature col">
